apps/cms/src/app/(payload)/custom.scss
@import "@focus-reactive/payload-plugin-seo/admin.css";

.confirmation-modal.save-as-preset-modal .confirmation-modal__wrapper {
  width: 100%;
  max-width: 32rem;
}

